--- a/src/assets/style/index.less
+++ b/src/assets/style/index.less
@@ -1,6 +1,9 @@
 * {
   scrollbar-color: #e5e5e5 #f7f7f9; // 滑块颜色  滚动条背景颜色
   scrollbar-width: thin; // 滚动条宽度有三种：thin、auto、none
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 ::-webkit-scrollbar {
   background: #f7f7f9; // 背景颜色
